# M2

./: #ReesAlgebra.m2#  .#ReesAlgebra.m2  .codespell_ignore  .codespellrc  .cvsignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  Associated Graded Ring Example  AssociatedGradedRingExample.m2  BSDmakefile  BerkeleyEditsBoijSoederberg.m2  CITATION.cff  CRN-1.output  ChangeLog  GNUmakefile.in  HomotopyGraphTypes.m2  INSTALL  LiskeFirstPackage.m2  LiskeStuff.m2  M2.dsw  Macaulay2.LSM  Makeconf  Makeconf-m2  Makeconf.var  Makefile  Makefile-configuration  Makefile-configure  Makefile-old-Makefile  Makefile-run.in  Makefile.in  MonodromySolver.m2  NumericalAlgebraicGeometry.m2  PointArray.m2  README  README.WINNT  README.libfac-0.3.2  README.md  ReesAlgebra.m2  (+33 more)
M2/: .clang-format  .cvsignore  .gitignore  BSDmakefile  CMakeLists.txt  ChangeLog  FastMinors.m2  GNUmakefile.in  INSTALL  INSTALL-CMake.md  INSTALL.factory-2.0.2-patch  INSTALL.gmp-4.1-patch  INSTALL.libfac-0.3.2-diffs  INSTALL.libfac-0.3.3-patch  INSTALL.mac  LICENSING-NOTES  LICENSING-NOTES.md  M2.dsw  Macaulay2.LSM  Makeconf  Makeconf-h  Makeconf.var  Makefile  Makefile-configuration  Makefile-configure  Makefile-old-Makefile  Makefile-run.in  Makefile.configfiles.in  Makefile.in  PORTS  README  README.WINNT  README.factory  README.gc  README.libfac-0.3.2  README.md  SConstruct  VERSION  VERSION-README  WindowsDistribution.dsp  (+11 more)
M2/Macaulay2/: .clang-format  .cvsignore  .gitignore  CHANGES  CMakeLists.txt  Core  INSTALL  LAYOUT  Macaulay2.dsp  Makefile  Makefile.in  MultiprojectiveVarieties.m2  README  README.in  README.txt  SConscript  macaulay2.lark  setup  setup.in  setup.template
M2/Macaulay2/basictests/: A01.m2  A02.m2  A04.m2  A05.m2  A06.m2  A07.m2  A10.m2  A44.m2  A66.m2  A77.m2  D01.m2  L00.m2  L00a.m2  Makefile  Makefile.in  bigreal.m2  regex.m2  testgc.c
M2/Macaulay2/book/: .cvsignore  CMakeLists.txt  Makefile  Makefile.in  README  book.m2  booktex.m2  hypertex.m2
M2/Macaulay2/bugs/: 0-check-package  inheritance-and-immutability  long-mutable-lists.m2
M2/Macaulay2/c/: .cvsignore  .gdbinit  .gitignore  CMakeLists.txt  Makefile  Makefile.in  README  SConscript  c.dsp  chk.c  chk.cpp  chk.h  compat.c  compat.h  cprint.c  cprint.cpp  cprint.h  debugging.cpp  debugging.h  dictionary.c  dictionary.cpp  dictionary.h  error.c  error.cpp  error.h  foo.d  grammar.c  grammar.cpp  grammar.h  grammar.y  keywords.h  list.c  list.cpp  list.h  makefile.dos  readfile.c  readfile.cpp  readfile.h  scc-core.c  scc-core.cpp  (+10 more)
M2/Macaulay2/compat/: .gitignore  Makefile.in  abort.c  accept.c  authdes_create.c  brk.c  connect.c  exec.c  getcwd.c  gethostbyname.c  getpagesize.c  getpid.c  getprotobyname.c  htons.c  kill.c  lgamma.c  sbrk.c  setsockopt.c  sleep.c  system.c  wait.c  xdrmem_create.c
M2/Macaulay2/d/: .cvsignore  .gdbinit  .gitignore  C.d  C.dep  C.sig  CMakeLists.txt  COPYRIGHT  GB.d  GB.dep  GB.sig  GC.dep  GC.sig  GreatCircle.diffs  M2-factory.cpp  M2.d  M2.dd  M2_setup.c  M2inits.c  M2inits.cpp  M2inits.h  M2inits1.cc  M2inits2.c  M2inits2.cc  M2inits3.cc  M2initschk.c  M2lib.c  M2lib.cpp  M2mem.c  M2mem.h  M2types.c  M2types.h  Makefile  Makefile.files.in  Makefile.in  SConscript  actors.d  actors.dd  actors.dep  actors.sig  (+182 more)
M2/Macaulay2/docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  modules.rst
M2/Macaulay2/dumpdata/: .cvsignore  .gdbinit  Makefile  Makefile.in  check.c  checkit.c  dumpdata.c  dumpdata.h  file.c  file.h  map-freebsd.c  map-linux.c  map-macosx.c  map-solaris.c  (+9 more)
M2/arch/: M2-build-notes
M2/autoconf/: .gitignore  Makefile  Makefile.library.manual
M2/check-configure/: Makefile.in
M2/cmake/: FindAtomicOps.cmake  FindBDWGC.cmake  FindCDD.cmake  FindCDDLIB.cmake  FindEAntic.cmake  FindFFI.cmake  FindFactory.cmake  FindFlint.cmake  FindFrobby.cmake  FindGDBM.cmake  FindGLPK.cmake  FindGMP.cmake  FindHistory.cmake  FindMPFI.cmake  FindMPFR.cmake  FindMPIR.cmake  FindMPSolve.cmake  FindMSolve.cmake  FindMathic.cmake  FindMathicgb.cmake  FindMemtailor.cmake  FindNTL.cmake  FindNauty.cmake  FindNormaliz.cmake  FindReadline.cmake  FindSphinx.cmake  FindTBB.cmake  build-libraries.cmake  check-libraries.cmake  configure.cmake  coverage.cmake  darwin.cmake  distributions.cmake  flavor.cmake  gmp_version.c  latex.cmake  libraries.cmake  packaging.cmake  prechecks.cmake  profiling.cmake  (+3 more)
M2/config/: Makefile  ax_func_accept_argtypes.m4  ax_prog_cc_for_build.m4  ax_python.m4  config.command  config.guess  files  gtest.m4  openmp.m4  relpaths.m4  search-libraries.m4
M2/cygwin/: Macaulay2.README.in  Makefile.in  macaulay2.sh.in  preremove.sh.in  setup.hint.in
M2/debian/: Makefile.in  README  control.in  copyright  deb.man  postinst.in  preinst.in  prerm.in
M2/distributions/: CMakeLists.txt  Makefile.filenames.in  Makefile.in
M2/encap/: INSTALL  Makefile.in  encapinfo  postinstall  postinstall.in  preremove  preremove.in
M2/files/: M2-suppressions.supp  info-dir-template
M2/include/: .cvsignore  config.Makefile.in  config.h.in  config.h.in.stamp  configuration.in  gc_fixes.h
M2/libraries/: .gitignore  CMakeLists.txt  Makefile.in  Makefile.library  Makefile.library.in  Makefile.template  README  SConscript
M2/local/: .gitignore  Makefile.local
M2/m4/: ax_func_accept_argtypes.m4  ax_prog_cc_for_build.m4  files
M2/man/: M2-help.1.in  M2.1  M2.1.in  Makefile.in
M2/nix/: default.nix
M2/projects/: FOOTER.html  README  README.html  TEMPLATE  absfac  bertini  cohomology  connecting-homomorphism  convex-hulls  cup-products  frobenius-multiplicities  functoriality  generic-initial-ideal  groebner-fans  groebner-walk  invariants  local  maximal-Cohen-Macaulay-approximations  moduli  multi-proj-cohomology  nauty  noether-normalization  normalization  normalization2  parametrization  phcpack  polymake  posets  resolution  resultants  schubert  schur  solving  surfaces  undergraduate-integralClosure
M2/rpm/: Macaulay2-body.spec.in  Macaulay2.spec  Macaulay2.spec.in  Makefile.in
M2/submodules/: README
M2/usr-build/: .gitignore  Makefile.pkg
M2/util/: validator-runner.py
(+5771 files in other folders)
